welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:9: error: reassignment to val
		nbpas=nbpas+1
                     ^