welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbpas: Int,versLAvant:Boolean){
	

if (versLAvant==true) {
	for ( n<-1 to nbpas )
	{
		avance();
		nbpas=nbpas+1
	}
}
else {
	for (n<-1 to nbpas) {recule();
	}
}

}


